--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^8.2.4"
+    "inquirer": "^8.2.4",
+    "svg2img": "^1.0.0-beta.2"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
