--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "inquirer": "^8.2.4",
-    "svg2img": "^1.0.0-beta.2"
+    "svg2img": "^0.9.4"
   },
   "devDependencies": {
     "jest": "^29.7.0"
